# polars-unpack

./: .gitignore  Dockerfile  Makefile  README.md  flatten_json.py  index.html  index.json  polars_ext.py  pyproject.toml  setup.py  style.css  test_flattener.py  test_parser.py  test_unpacker.py  unpack.py
.github/workflows/: deploy.yaml  test.yaml
api/: index.html
generator/: index.html  script.js  style.css
logos/: README.md
polars_unpack/: README.md  __init__.py  unpack.py
samples/: complex.csv  complex.json  complex.ndjson  complex.schema  nested-list.json  nested-list.schema  nested-struct.schema  simple.schema
tests/: README.md  __init__.py  index.html  nested-list.json  nested-list.schema  nested-struct.json  nested-struct.schema  simple.schema  test_parser.py  test_polars_ext.py  test_unpacker.py
tests/samples/: complex.json  complex.ndjson  nested-list.ndjson  nested-list.schema  nested-struct.schema  simple.ndjson
web/: Dockerfile  README.md  front-matter.md  toc.md  unpack.py  unpack_logo.py
web/generator/: index.md  script.js  style.css
