[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name        = "polars-unpack"
description = "TODO"
version     = "0.0.1"
readme      = "README.md"
dependencies = ["polars >= 0.18.0"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["polars", "json", "unpack"]

[project.optional-dependencies]
tests = [
  'coverage>=5.0.3',
  'pytest',
  'pytest-benchmark[histogram]>=3.2.1',
]

[project.urls]
"Homepage" = "https://github.com/carnarez/polars-unpack"

[tool.setuptools]
py-modules = ["unpack"]